--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FutureTech | Главная</title>
-   <script type="module" crossorigin src="/main.js"></script>
-   <link rel="stylesheet" crossorigin href="/main.css">
+   <script type="module" crossorigin src="main.js"></script>
+   <link rel="stylesheet" crossorigin href="main.css">
  </head>
  <body>
   
@@ -36,6 +36,7 @@
   </div>
 </header>
 <main class="main"></main>
-<footer class="footer"></footer>
+<footer class="footer"></footer>
+
  </body>
 </html>
